2006-07-12  Adam Jocksch  <ajocksch@redhat.com>

	* SessionManagerGui.java: Replaced all occurances of System.exit(0) with
	Gtk.mainQuit().

2006-07-12  Nurdin Premji  <npremji@redhat.com>

	* glade/procpop.glade: Added accessibility Information for EventViewer.

2006-07-12  Mike Cvet  <mcvet@redhat.com>

	* memory/MemoryWindow.java: Cleaned up and commented

2006-07-11  Mike Cvet  <mcvet@redhat.com>

	* memory/MemoryWindow.java: Cleaned up some private 
	variables, class is now created from a Factory, other bittiness
	and endianness fixes.
	(setTask): Fixed a combobox display bug
	(.comboBoxEvent): Fixed a combobox selection bug
	(refreshList): Enabled endian-based reads
	(switchEndianness): Refactored, now switches endianness properly,
	and fixed an array bounds bug.
	(recalculate): Removed redundant code now provided by rowAppend().
	(rowAppend): Added.
	(handleFromSpin): Enabled a check for spin bounds, Removed 
	redundant code now provided by rowAppend().
	(handleToSpin): Ditto and ditto.
	* glade/memorywindow.glade: Fixed some alignment and window 
	titles.
	* glade/registerwindow.glade: Fixed title. 
	* Gui.java (Gui): Removed reference to static MemoryWindow via 
	WindowManager.
	* register/RegisterWindow.java (switchEndianness): Refactored, and
	fixed an array bounds bug.

2006-07-10  Sami Wagiaalla  <swagiaal@redhat.com>

	* glade/window.glade: Added scrollWindows to Filters and actions
	in EditObserverDialog. 

2006-07-10  Adam Jocksch  <ajocksch@redhat.com>

	* memory/MemoryWindow.java (reverse): Ported endianess fix from
	RegisterWindow.java.

	* register/RegisterWindow.java (reverse): Renamed to switchEndianess,
	now correctly switches the byte order and not the bit order.

2006-07-07  Adam Jocksch  <ajocksch@redhat.com>

	* register/RegisterWindow.java (setTask): Now uses a seperate column to
	enable right-justification.

	* register/RegisterWindow.java (setTask): Now sets right alignment on
	data columns.
